--- a/src/com/slugsource/steamcategories/gui/SteamCategoriesGui.form
+++ b/src/com/slugsource/steamcategories/gui/SteamCategoriesGui.form
@@ -39,6 +39,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Quit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="quitMenuItemActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
